--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
 
 dependencies {
     compile files("$VUFORIA_SDK_DIR/$JAR_DIR/Vuforia.jar")
+    compile project(':vuforia')
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
