--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,15 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.CATEGORY_BROWSABLE" />
             </intent-filter>
         </activity>
-        <activity android:name=".ObjLoadActivity"></activity>
+        <activity android:name=".ObjLoadActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.CATEGORY_BROWSABLE" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
