--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ def NATIVE_LIB_DIR = 'build/lib'
 def JAR_DIR = 'build/java/vuforia'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
 
     sourceSets.main {
         jni.srcDirs = []
@@ -16,7 +16,7 @@ android {
     defaultConfig {
         applicationId "com.shopify.hackday.ar"
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 200
         versionName "5.0"
     }
@@ -45,6 +45,7 @@ dependencies {
     compile project(':vuforia')
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:23.1.1'
 
     // Latest Rajawali lib version
     compile 'org.rajawali3d:rajawali:1.1.517-SNAPSHOT@aar'
