Added rajawali to vuforia module.

--- a/vuforia/build.gradle
+++ b/vuforia/build.gradle
@@ -28,5 +28,5 @@ android {
 dependencies {
     compile files("$VUFORIA_SDK_DIR/$JAR_DIR/Vuforia.jar")
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    compile 'org.rajawali3d:rajawali:1.1.517-SNAPSHOT'
 }
