--- a/vuforia/build.gradle
+++ b/vuforia/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile files("$VUFORIA_SDK_DIR/$JAR_DIR/Vuforia.jar")
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'org.rajawali3d:rajawali:1.1.517-SNAPSHOT'
+    compile 'com.android.support:support-v4:23.1.1'
 }
