--- a/vuforia/build.gradle
+++ b/vuforia/build.gradle
@@ -5,8 +5,8 @@ def NATIVE_LIB_DIR = 'build/lib'
 def JAR_DIR = 'build/java/vuforia'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.3"
 
     defaultConfig {
         minSdkVersion 15
@@ -29,5 +29,5 @@ dependencies {
     compile files("$VUFORIA_SDK_DIR/$JAR_DIR/Vuforia.jar")
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'org.rajawali3d:rajawali:1.1.517-SNAPSHOT'
-    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:appcompat-v7:24.2.1'
 }
