--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ def NATIVE_LIB_DIR = 'build/lib'
 def JAR_DIR = 'build/java/vuforia'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.3"
 
     sourceSets.main {
         jni.srcDirs = []
@@ -16,7 +16,7 @@ android {
     defaultConfig {
         applicationId "com.shopify.hackday.ar"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 200
         versionName "5.0"
     }
@@ -27,14 +27,16 @@ android {
         release {
             minifyEnabled false
             ndk {
-                abiFilters "armeabi-v7a"
+                abiFilters = []
+                abiFilters.addAll(['armeabi','armeabi-v7a', 'x86'])
             }
         }
         debug {
             minifyEnabled false
             debuggable true
             ndk {
-                abiFilters "armeabi-v7a"
+                abiFilters = []
+                abiFilters.addAll(['armeabi','armeabi-v7a', 'x86'])
             }
         }
     }
@@ -45,24 +47,10 @@ dependencies {
     compile project(':vuforia')
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:appcompat-v7:24.2.1'
 
     // Latest Rajawali lib version
     compile 'org.rajawali3d:rajawali:1.1.517-SNAPSHOT@aar'
 
     compile 'io.reactivex:rxjava:1.1.4'
-    compile 'io.reactivex:rxandroid:1.2.0'
-
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.squareup.okhttp3:okhttp:3.3.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
-    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.3.1'
-    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
-    compile 'com.squareup.retrofit2:retrofit:2.0.1'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.1'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.1'
-
-    compile 'com.facebook.stetho:stetho:1.3.1'
-    compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
-    compile 'com.facebook.stetho:stetho-urlconnection:1.3.1'
 }
